--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -29,7 +29,7 @@ header {
     justify-content: center;
     align-items: center;
     color: #fff;
-    background: linear-gradient(90deg, rgb(91, 91, 184), rgb(0, 0, 99));
+    background: linear-gradient(90deg,  rgb(201, 198, 198), blueviolet);
 }
 
 header h1 {
@@ -65,14 +65,14 @@ aside input {
 
 aside button {
     width: 100%;
-    cursor: pointer;
-    background-color: rgb(118, 153, 235);
+    cursor: grab;
+    background-color:blueviolet;
     color: rgb(221, 221, 221);
     padding: 0.5rem 0;
-    border-radius: 0.2rem;
+    border-radius: 0.4rem;
     border: none;
     margin: 1rem 0;
-    font-size: 0.9rem;
+    font-size: 1rem;
     transition: 0.15s ease-out;
 }
 
@@ -85,7 +85,7 @@ aside button:active {
 }
 
 .searched-cities button {
-    background-color: rgb(173, 173, 173);
+    background-color:rgb(201, 198, 198);
     color: #000;
     margin: 1rem 0 0;
 }
@@ -101,10 +101,22 @@ section {
 .current-weather-container {
     border: 1px solid #000;
     padding: 0.5rem 0.3rem 0;
+    background-color: rgb(231, 222, 239);
+    
+}
+
+#current-city,
+#current-date,
+#current-humidity,
+#current-icon {
+    justify-content: center;
+    display: flex;
 }
 
 .current-weather p {
     margin: 1.3rem 0;
+    display: flex;
+    justify-content: center;
 }
 
 /* Next five days weather */
@@ -124,7 +136,7 @@ section {
 
 .day {
     color: #fff;
-    background-color: rgb(49, 53, 82);
+    background-color:rgb(168, 103, 228);
     padding: 0.3rem 0.3rem 0.5rem;
     width: 18%;
 }
